ajustes de assinaturas

--- a/colaboradores/iuri.html
+++ b/colaboradores/iuri.html
@@ -4,17 +4,45 @@
 <!DOCTYPE html>
 
 <html>
-	<link rel="stylesheet" type="text/css" href="css/main.css" media="screen">	
+	<!-- CSS -->
+	<style>
+		html{
+			font-family: Trebuchet MS, tahoma;
+			font-size: 12px;
+			display: block;
+		}
+
+		.text{
+			font-size: 14px;
+			color:#a01414;
+			padding-left:10px;
+		}
+
+		.ddd{
+			font-size: 11px;
+		}
+		.data{
+			font-size:12px;
+			color: #4e4e50; 
+			padding-left:1px;
+		}
+
+		.links{
+			color: #851010;
+			font-size: 12px;
+		}
+	</style>
+		
 	<table>
 	 	<tr>
-		    <td valign="top">
-		     	<img src="img/logo.png" width="98" height="99" border="0" /> <!--IMAGEM WUP FOOD-->
+		    <td valign="top"> 
+		     	<img src="https://raw.githubusercontent.com/TI-AncoraEngenharia/assinaturaWUP/master/img/logo.png" width="98" height="99" border="0" />  <!--IMAGEM WUP FOOD-->
 		    </td>
 
 		    <td class="text">
-	      		<strong>Hevelin Nolasco</strong> <!-- NOME -->
+	      		<strong>Iuri Cicolani</strong> <!-- NOME -->
 	      		<br>
-	      		Departamento <!-- CARGO -->
+	      		Gerente de Supply Chain <!-- CARGO -->
 	      		<br>
 	      		<strong>T</strong>
 	      		<font class="ddd">55 11</font>
