--- a/colaboradores/julianaLiessi.html
+++ b/colaboradores/julianaLiessi.html
@@ -4,15 +4,44 @@
 <!DOCTYPE html>
 
 <html>
-	<link rel="stylesheet" type="text/css" href="css/main.css" media="screen">	
+	<!-- CSS -->
+	<style>
+		html{
+			font-family: Trebuchet MS, tahoma;
+			font-size: 12px;
+			display: block;
+		}
+
+		.text{
+			font-size: 14px;
+			color:#a01414;
+			padding-left:10px;
+		}
+
+		.ddd{
+			font-size: 11px;
+		}
+		.data{
+			font-size:12px;
+			color: #4e4e50; 
+			padding-left:1px;
+		}
+
+		.links{
+			color: #851010;
+			font-size: 12px;
+		}
+	</style>	
 	<table>
 	 	<tr>
 		    <td valign="top">
-		     	<img src="img/logo.png" width="98" height="99" border="0" /> <!--IMAGEM WUP FOOD-->
+		     	<img src="https://raw.githubusercontent.com/TI-AncoraEngenharia/assinaturaWUP/master/img/logo.png" width="98" height="99" border="0" /> <!--IMAGEM WUP FOOD-->
 		    </td>
 
 		    <td class="text">
-	      		<strong>Departamento de RH</strong>
+	      		<strong>Juliana Liessi</strong> <!-- NOME -->
+	      		<br>
+	      		Assistente de Marketing <!-- CARGO -->
 	      		<br>
 	      		<strong>T</strong>
 	      		<font class="ddd">55 11</font>
@@ -27,7 +56,7 @@
 	
 	<p class="data">
 		<a class="links" href="mailto:nome@wupfood.com.br" target="_blank"> <!-- EMAIL LINK -->
-			nome@wupfood.com.br
+			juliana.liessi@wupfood.com.br
 		</a>
 							
 		|
