--- a/colaboradores/hercules.html
+++ b/colaboradores/hercules.html
@@ -1,6 +1,6 @@
 <!-- Assinatura Wup Food-->
 <!-- Código desenvolvido por Michelly Lima 02/10/19 -->
-<!-- Ultima atualização	10/01/2020 -->
+<!-- Ultima atualização	17/01/2020 -->
 <!DOCTYPE html>
 
 <html>
@@ -39,7 +39,7 @@
 		    </td>
 
 		    <td class="text">
-	      		<strong>Hercules Nolasco</strong> <!-- NOME -->
+	      		<strong>Eng. Hercules Nolasco</strong> <!-- NOME -->
 	      		<br>
 	      		CEO <!-- CARGO -->
 	      		<br>
@@ -49,7 +49,7 @@
 	      		<br>
 	      		<strong>C</strong>
 	      		<font class="ddd">55 11</font>
-	      		95600.3670 <!-- CELULAR -->
+	      		97439.3416 <!-- CELULAR -->
 	      	</td>
 		</tr>
 	</table>
