--- a/colaboradores/hercules.html
+++ b/colaboradores/hercules.html
@@ -1,8 +1,8 @@
 <!-- Assinatura Wup Food-->
 <!-- Código desenvolvido por Michelly Lima 02/10/19 -->
-<!-- Ultima atualização	17/01/2020 -->
+<!-- Ultima atualização	10/01/2020 -->
 <!DOCTYPE html>
-
+<meta charset="UTF-8"/>
 <html>
 	<!-- CSS -->
 	<style>
@@ -39,13 +39,13 @@
 		    </td>
 
 		    <td class="text">
-	      		<strong>Eng. Hercules Nolasco</strong> <!-- NOME -->
+	      		<strong>Eng. Hércules Nolasco</strong> <!-- NOME -->
 	      		<br>
 	      		CEO <!-- CARGO -->
 	      		<br>
 	      		<strong>T</strong>
 	      		<font class="ddd">55 11</font>
-	      		5635.9700 <!-- TELEFONE -->
+	      		3842.2117 <!-- TELEFONE -->
 	      		<br>
 	      		<strong>C</strong>
 	      		<font class="ddd">55 11</font>
@@ -66,6 +66,6 @@
 	    </a>
 	      
 	    <br />
-	    Rua Fiandeiras 828 - Itaim Bibi - SP - Brasil | CEP: 04545-000 <!-- ENDEREÇO -->     	
+	    Rua Fiandeiras, 828 - Itaim Bibi - SP - Brasil | CEP: 04545-000 <!-- ENDEREÇO -->     	
 	</p>
 </html>
